--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>For You — Will you be mine?</title>
+  <title>For my love — Sereen Andre</title>
 <link rel="stylesheet" href="index.css">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
@@ -22,7 +22,7 @@
       <header>
         <div class="logo">Aditi</div>
         <h1 id="title">For You —</h1>
-        <div class="subtitle">A little story… then a question from my heart</div>
+        <div class="subtitle">I just wanted to tell you this </div>
       </header>
 
       <div id="messages" aria-live="polite"></div>
@@ -38,8 +38,8 @@
   <div id="reveal" class="reveal" role="dialog" aria-modal="true" aria-hidden="true">
     <div class="reveal-card">
       <h2>Yes ❤️</h2>
-      <p id="finalLine">You're My girl Now — And You've to tell me that you've said yes.</p>
-      <div class="small">Forever starts now.</div>
+      <p id="finalLine">my valentine.</p>
+      <div class="small">my beautifull Queen.</div>
     </div>
   </div>
 
