Change 'Next' button text to 'Yes'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <div class="controls">
         <button id="prev" class="btn ghost" style="visibility:hidden">← Back</button>
-        <button id="next" class="btn">Next ➝</button>
+        <button id="next" class="btn">Yes ➝</button>
       </div>
     </div>
   </div>
