Update subtitle and button text in index.html

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <header>
         <div class="logo">Aditi</div>
         <h1 id="title">For You —</h1>
-        <div class="subtitle">I just wanted to tell you this </div>
+        <div class="subtitle">My love </div>
       </header>
 
       <div id="messages" aria-live="polite"></div>
 
       <div class="controls">
         <button id="prev" class="btn ghost" style="visibility:hidden">← Back</button>
-        <button id="next" class="btn">Yes ➝</button>
+        <button id="next" class="btn">Next➝</button>
       </div>
     </div>
   </div>
