Change logo name from 'Aditi' to 'Sereen'

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="wrap">
     <div class="card" role="main" aria-labelledby="title">
       <header>
-        <div class="logo">Aditi</div>
+        <div class="logo">Sereen</div>
         <h1 id="title">For You —</h1>
         <div class="subtitle">My love </div>
       </header>
